start in krypto first view

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
     <link rel="icon" type="image/x-icon" href="./assets/SK-favicon.svg" />
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://www.paypal.com/sdk/js?client-id=YOUR_CLIENT_ID&currency=EUR"></script>
+    
+    <!-- <script src="https://tidycal.com/js/embed.js" async></script> -->
+  
   </head>
   <body>
     <app-root></app-root>
