--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://www.paypal.com/sdk/js?client-id=YOUR_CLIENT_ID&currency=EUR"></script>
     
-    <!-- <script src="https://tidycal.com/js/embed.js" async></script> -->
+    <script src="https://asset-tidycal.b-cdn.net/js/embed.js" async></script>
   
   </head>
   <body>
